# eagle

./: .gitignore  Cargo.toml  README.md
.github/: renovate.json
configs/: deny.toml
crates/apps/eagle-cloudflare-workers/: .gitignore  Cargo.toml
crates/apps/eagle-cloudflare-workers/src/: game.rs
crates/apps/xeejp/: .env.local  .eslintrc.json  .gitignore  .prettierrc  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  wrangler.toml
crates/apps/xeejp-server/: .gitignore  Cargo.toml  wrangler.toml
crates/apps/xeejp-server/src/: game.rs  lib.rs  repository.rs  room_key.rs  tracing.rs  types.rs  ultimatum.rs  user.rs  utils.rs
crates/apps/xeejp/api/: gameSocket.ts  room.ts
crates/apps/xeejp/app/: layout.tsx  page.tsx
crates/apps/xeejp/app/components/visitors/: footer.tsx
crates/apps/xeejp/app/data/: settings.tsx
crates/apps/xeejp/app/pages/: _app.tsx  _document.tsx  index.tsx
crates/apps/xeejp/app/pages/conductor/: index.tsx
crates/apps/xeejp/app/pages/conductor/research/: payment.tsx  process.tsx
crates/apps/xeejp/components/: layout.tsx  pageTitle.tsx  titleHeader.tsx
crates/apps/xeejp/components/conductor/: descriptionInput.tsx  rooms.tsx
crates/apps/xeejp/components/visitors/: enterUUID.tsx  footer.tsx  header.tsx  top.tsx  topPage.tsx
crates/apps/xeejp/data/: config.ts  user.ts
crates/apps/xeejp/pages/: 404.tsx  500.tsx  _app.tsx  _document.tsx  conduct.tsx  index.tsx  play.tsx
crates/apps/xeejp/pages/conductor/: create_room3.tsx  index.tsx  room_create.tsx  room_management.tsx
crates/apps/xeejp/pages/conductor/research/: description.tsx  experiment.tsx  localize.tsx  subject.tsx
crates/apps/xeejp/pages/hosts/: create_room.tsx  create_room3.tsx  settings.tsx
crates/apps/xeejp/src/: game.rs  lib.rs  repository.rs  types.rs  ultimatum.rs
crates/apps/xeejp/src/components/: footerNaviButton.tsx  loadingButton.tsx  pageTitleInput.tsx
crates/apps/xeejp/src/components/subject/: description.tsx
crates/apps/xeejp/src/components/visitors/: enterUUID.tsx  header.tsx  top.tsx
crates/apps/xeejp/src/pages/: 404.tsx  500.tsx
crates/apps/xeejp/src/pages/conductor/research/: confirmation.tsx  restoration.tsx
crates/apps/xeejp/src/pages/subject/: description.tsx
crates/core/eagle/: Cargo.toml
crates/core/eagle-client/: Cargo.toml
crates/core/eagle-client/src/: channel.rs  client.rs  lib.rs  notify_log.rs  repository.rs
crates/core/eagle-game/: Cargo.toml
crates/core/eagle-game/src/: bubble.rs  bubbled.rs  channel.rs  channels.rs  clients.rs  command_history.rs  eff_handler.rs  effectful.rs  event_history.rs  events.rs  game.rs  game_context.rs  game_handle.rs  game_instances.rs  lib.rs  notify_history.rs  room.rs  room_context.rs  room_state.rs  serialized_event.rs  server.rs  system_state.rs
crates/core/eagle-game/src/context/: mod.rs  private.rs  public.rs
crates/core/eagle-game/src/game/: context.rs  handle.rs  mod.rs  render_context.rs
crates/core/eagle-game/src/game/context/: mod.rs  private.rs  public.rs
crates/core/eagle-game/src/model/: context.rs  dispatcher.rs  handle.rs  mod.rs  render_context.rs
crates/core/eagle-game/src/room/: command_history.rs  game_instances.rs  mod.rs
crates/core/eagle-game/src/screen/: mod.rs  model_instances.rs
crates/core/eagle-postgres/: Cargo.toml
crates/core/eagle-server/: Cargo.toml
crates/core/eagle-server/src/: channel.rs  channels.rs  clients.rs  effect_outcomes.rs  last_view.rs  lib.rs  notify_sender.rs  repository.rs  server.rs
crates/core/eagle-types/: Cargo.toml
crates/core/eagle-types/src/: client.rs  errors.rs  event.rs  events.rs  ids.rs  lib.rs  messages.rs  player.rs
crates/core/eagle-web-client/: Cargo.toml
crates/games/eagle-ultimatum/: .gitignore  Cargo.toml  package.json
crates/games/eagle-ultimatum/src/: conductor_model.rs  conductor_view.rs  config.rs  events.rs  game.rs  lib.rs  phase.rs  player_model.rs  player_view.rs  types.rs
crates/games/ultimatum/: Cargo.toml
crates/games/ultimatum/src/: conductor_model.rs  conductor_view.rs  config.rs  error.rs  events.rs  game.rs  lib.rs  player_model.rs  player_view.rs  types.rs
tools/: next.sh  npm.sh  wasm-pack.sh  wrangler.sh
