[workspace]

members = ["crates/apps/*", "crates/core/*", "crates/games/*"]

[workspace.dependencies]
eagle-types = { path = "crates/core/eagle-types" }
eagle-game = { path = "crates/core/eagle-game" }
eagle-server = { path = "crates/core/eagle-server" }

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde", "js"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0" }
thiserror = { version = "1.0" }
