[package]
name = "xeejp-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eagle-types = { workspace = true }
eagle-game = { workspace = true }
eagle-server = { workspace = true }
eagle-ultimatum = { workspace = true }
xeejp = { path = "../xeejp" }

password-hash = "0.5"
worker = "0.0.18"
futures = { workspace = true }
uuid = { workspace = true, features = ["js"] }
serde = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
argon2 = "0.5"
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
console_error_panic_hook = "0.1"
tracing-subscriber = { workspace = true, features = ["json", "time"] }
tracing-web = "0.1"
