[package]
name = "eagle-xeejp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A game engine for academic large-scale experiments."
repository = "https://github.com/eagle/eagle"
readme = "../../../README.md"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
eagle-types = { workspace = true }
eagle-game = { workspace = true }
eagle-server = { workspace = true }
eagle-ultimatum = { workspace = true }

worker = "= 0.0.17"
futures = "0.3.21"
uuid = { version = "1.3.3", features = ["v4", "js"] }
serde = { version = "1.0.163", features = ["derive"] }
getrandom = { version = "0.2.10", features = ["js"] }
