[package]
name = "xeejp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A game engine for academic large-scale experiments."
repository = "https://github.com/eagle/eagle"
readme = "../../../README.md"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eagle-types = { workspace = true }
eagle-game = { workspace = true }
eagle-ultimatum = { workspace = true }

wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gloo-net = "0.3"
futures = { workspace = true }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.5"
