[package]
name = "eagle-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eagle-types = { workspace = true }

serde = { workspace = true, features = [] }
chrono = { workspace = true }
ron = "0.8.0"
