[package]
name = "eagle-game"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A game engine for academic large-scale experiments."
repository = "https://github.com/eagle/eagle"
readme = "../../../README.md"

[dependencies]
eagle-types = { workspace = true }

serde = { workspace = true, features = [] }
erased-serde = "0.3"
chrono = { workspace = true }
ron = "0.8.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
anyhow = { workspace = true }
