[package]
name = "eagle-types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A game engine for academic large-scale experiments."
repository = "https://github.com/eagle/eagle"
readme = "../../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
